# job-hunter-kit

./: .gitignore  AGENTS.md  README.md  pyproject.toml
config/: search_job_config.yaml
examples/: sample_jobs.json  search_job_config.example.yaml
scripts/: append_analyzed_jobs.py  collect_linkedin_jobs.py  dashboard.py  dedupe_analyzed_jobs.py  export_new_jobs_to_analyze.py
src/job_hunter_kit/: __init__.py  collectors.py  config.py  dashboard_data.py  filters.py  io.py  master_csv.py  models.py  refresh.py  state.py  translator.py  workflows.py
tests/: test_collectors.py  test_config.py  test_dashboard_data.py  test_filters.py  test_io.py  test_master_csv.py  test_refresh.py  test_state.py  test_workflows.py
